syntax = "proto3";

option go_package = "go-apache-go/proto;service";
package proto;

service UserService {
  rpc CreateGraph (CreateGraphRequest) returns (CreateGraphResponse);
  rpc AddVertex (AddVertexRequest) returns (AddVertexResponse);
  rpc AddEdge (AddEdgeRequest) returns (AddEdgeResponse);
}

message CreateGraphRequest {
  string graphName = 1;
}

message CreateGraphResponse {
  string message = 1;
}

message AddVertexRequest {
  string graphName = 1;
  string label = 2;
  string properties = 3;
}

message AddVertexResponse {
  string message = 1;
}

message AddEdgeRequest {
  string graphName = 1;
  string label = 2;
  string properties = 3;
  string fromVertexId = 4;
  string toVertexId = 5;
}

message AddEdgeResponse {
  string message = 1;
}
